# diagonal-loop

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: dim2.rs  dim3.rs  main.rs  util.rs
