[package]
name = "diagonal-loop"
version = "0.1.0"
edition = "2021"
authors = ["Ken Matsui <26405363+ken-matsui@users.noreply.github.com>"]
description = "Example code of diagonal loops for 2 & 3-dimensional arrays"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ken-matsui/diagonal-loop"
homepage = "https://github.com/ken-matsui/diagonal-loop#readme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
clap = { version = "4.1", features = ["derive"] }
